--- a/fragment/MDG1.html
+++ b/fragment/MDG1.html
@@ -1,6 +1,76 @@
-<div style="min-height:	242px;" class="content-wrapper"><div class="container-fluid"><!--	Content	Header	(Page	header)--><section class="content-header"><h1>	OverView<small>	Example	2.0</small></h1>													<ol class="breadcrumb"><li><a href="#"><i class="fa fa-dashboard"></i>		Home</a></li>															<li class="active">	OverView</li></ol></section><!--	Main	content--><section class="content"><div class="col-md-3"><div class="box box-primary"><div class="box-header"><i class="fa fa-bar-chart-o"></i>																			<h3 class="box-title">	Sample	Chart</h3>																	</div><div class="box-body"><div id="donut-chart" style="height:300px;"></div></div></div></div><div class="col-lg-3 col-xs-6"><div class="small-box bg-yellow"><div class="inner"><h3>15 %</h3>	<p>BCG Coverage</p>		</div><div class="icon"><i class="ion ion-arrow-graph-down-left"></i>		</div><a href="#" class="small-box-footer">More info	<i class="fa fa-arrow-circle-right"></i></a></div></div><div class="col-lg-3 col-xs-6"><div class="small-box bg-green"><div class="inner"><h3>44 %</h3>	<p>ANC Coverage</p>		</div><div class="icon"><i class="ion ion-stats-bars"></i>		</div><a href="#" class="small-box-footer">More info	<i class="fa fa-arrow-circle-right"></i></a></div></div><div class="col-lg-3 col-xs-6"><div class="small-box bg-red"><div class="inner"><h3>44 %</h3>	<p>Safe Birth attendance</p>		</div><div class="icon"><i class="ion ion-woman"></i>		</div><a href="#" class="small-box-footer">More info	<i class="fa fa-arrow-circle-right"></i></a></div></div><div class="col-lg-3 col-xs-6"><div class="small-box bg-red"><div class="inner"><h3>32 %</h3>	<p>Malaria Rise Up</p>		</div><div class="icon"><i class="ion ion-man"></i>		</div><a href="#" class="small-box-footer">More info	<i class="fa fa-arrow-circle-right"></i></a></div></div></section></div><div class="container-fluid"><!--	Content	Header	(Page	header)--><section class="content-header"><h1>	Maps<small>	Example	2.0</small></h1>													<!--ol.breadcrumbli
+<div style="min-height:	242px;" class="content-wrapper"><div class="container-fluid"><!--	Content	Header	(Page	header)--><!--section.content-headerh1
+		|	OverView
+		small	Example	2.0
+|													
+ol.breadcrumb
+		li
+				a(href='#')
+						i.fa.fa-dashboard
+						|		Home
+		|															
+		li.active	OverView--><!--	Main	content--><!--section.content.col-md-3
+	.box.box-primary
+		.box-header
+						i.fa.fa-bar-chart-o
+						|																			
+						h3.box-title	Sample	Chart
+						|																	
+				.box-body
+						#donut-chart(style='height:300px;')
+.col-lg-3.col-xs-6
+	.small-box.bg-yellow
+		.inner
+				h3 15 %
+				|	
+				p BCG Coverage
+				|		
+			.icon
+				i.ion.ion-arrow-graph-down-left
+				|		
+			a.small-box-footer(href='#')
+			| More info	
+			i.fa.fa-arrow-circle-right
+.col-lg-3.col-xs-6
+	.small-box.bg-green
+		.inner
+				h3 44 %
+				|	
+				p ANC Coverage
+				|		
+			.icon
+				i.ion.ion-stats-bars
+				|		
+			a.small-box-footer(href='#')
+			| More info	
+			i.fa.fa-arrow-circle-right
+.col-lg-3.col-xs-6
+	.small-box.bg-red
+		.inner
+				h3 44 %
+				|	
+				p Safe Birth attendance
+				|		
+			.icon
+				i.ion.ion-woman
+				|		
+			a.small-box-footer(href='#')
+			| More info	
+			i.fa.fa-arrow-circle-right
+.col-lg-3.col-xs-6
+	.small-box.bg-red
+		.inner
+				h3 32 %
+				|	
+				p Malaria Rise Up
+				|		
+			.icon
+				i.ion.ion-man
+				|		
+			a.small-box-footer(href='#')
+			| More info	
+			i.fa.fa-arrow-circle-right--></div><div class="container-fluid"><!--	Content	Header	(Page	header)--><section class="content-header"><h1>	Maps<small>	Example	2.0</small></h1>													<!--ol.breadcrumbli
 		a(href='#')
 				i.fa.fa-dashboard
 				|		Home
 |															
-li.active	OverView--></section><!--	Main	content--><section class="content"><div class="col-md-4"><div class="box box-primary"><div class="box-header"><i class="fa fa-bar-chart-o"></i>																			<h3 class="box-title">	Sample	Map</h3>																	</div><div class="box-body"><div id="Samplemap" style="height:400px;"></div></div></div></div><div class="col-md-7"><div class="box box-primary"><div class="box-header"><i class="fa fa-bar-chart-o"></i>				<h3 class="box-title">Sample Chart</h3></div><div class="box-body"><div id="SampleChart" style="height:400px;"></div></div></div></div></section></div></div>
+li.active	OverView--></section><!--	Main	content--><section class="content"><div class="col-md-4"><div class="box box-primary"><div class="box-header"><i class="fa fa-bar-chart-o"></i>																			<h3 class="box-title">	Sample	Map</h3>																	</div><div class="box-body"><div id="Samplemap" style="height:400px;"></div></div></div></div><div class="col-md-7"><div class="box box-primary"><div class="box-header"><i class="fa fa-bar-chart-o"></i>				<h3 class="box-title">Sample Chart</h3></div><div class="box-body"><div id="SampleChart" style="height:400px;"></div></div></div></div></section></div></div><script type="text/javascript" src="/js/MDG1.js"></script>
